small changes: done fixed menu on mobile resolution

--- a/src/components/layout/Header/header.module.css
+++ b/src/components/layout/Header/header.module.css
@@ -5,6 +5,14 @@
     box-shadow: 0 -8px 10px 10px #697172;
 }
 
+@media screen and (max-width: 500px) {
+    .header {
+        width: 100vw;
+        position: fixed;
+        z-index: 5;
+    }
+}
+
 .header > a {
     display: flex;
     align-items: center;
