--- a/src/components/pages/favourite/favourite.module.css
+++ b/src/components/pages/favourite/favourite.module.css
@@ -1,3 +1,9 @@
+.main {
+    display: flex;
+    flex-direction: column;
+}
+
+
 .container {
     margin: 50px 60px;
     display: grid;
@@ -34,6 +40,7 @@
 
 @media screen and (max-width: 500px) {
     .container {
+        margin-top: 90px;
         grid-template-columns: repeat(1, 1fr);
     }
 }
