--- a/src/components/pages/main/mainpage.module.css
+++ b/src/components/pages/main/mainpage.module.css
@@ -45,6 +45,7 @@ p {
 
 @media screen and (max-width: 500px) {
     .container {
+        margin-top: 90px;
         grid-template-columns: repeat(1, 1fr);
     }
 }
